Fix spacing in figcaptions

--- a/src/styles/generic/_links.scss
+++ b/src/styles/generic/_links.scss
@@ -60,7 +60,7 @@ p :visited:active {
   background: url('images/icons/launch.svg') no-repeat center / contain;
   content: '';
   margin-left: 2px;
-  padding-right: 22px; // sizing
+  padding-right: 1.222em; // sizing
 }
 
 // DevSite override
